# rts

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: test.yml
docs/: index.md
docs/developers/: getting_started.md  index.md  ownership.md  roadmap.md  unit_testing.md
docs/players/: index.md  install.md  ruler.md  tower.md
docs/players/entities/: ruler.md  soldier.md  tower.md
rts/: __main__.py  config.py  constants.py  game.py  link.py  rts.py  soldier.py  state.py  tower.py
rts/controllers/: entity_controller.py  event_controller.py  meta_singleton.py  state_controller.py  time_controller.py
rts/models/: game_entity.py  message_box.py
rts/sprites/: route.py  ruler.py  soldier.py  tower.py
tests/: test_game_instance.py  test_rts.py  test_settings.py  test_soldiers_spec.py  test_state_manager.py  test_towers.py
tests/controllers/: test_entity_controller.py  test_time_controller.py
tests/sprites/: test_routes.py  test_ruler.py  test_soldiers.py  test_tower_soldier_collisions.py  test_towers.py
