[tool.poetry]
name = "rts"
version = "0.1.0"
description = "Real time strategy project."
authors = [
  "Daniele Tentoni <daniele.tentoni.1996@gmail.com>",
  "Andrea Nicoletti",
  ]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
mkdocs = "^1.2.3"
mypy = "^0.942"
pygame-gui = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
