[tool.poetry]
name = "rts"
version = "0.1.0"
description = "Real time strategy project."
license = "GPL-3.0-or-later"
authors = [
  "Daniele Tentoni <daniele.tentoni.1996@gmail.com>",
  "Andrea Nicoletti",
  ]
maintainers = [
  "Daniele Tentoni <daniele.tentoni.1996@gmail.com>",
]
readme = "README.md"
homepage = "https://rts.readthedocs.io/en/latest/"
repository = "https://github.com/Daniele-Tentoni/rts"
documentation = "https://rts.readthedocs.io/en/latest/developers/"
keywords = ["realtime", "pygame"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment",
  "Topic :: Games/Entertainment :: Real Time Strategy",
]

[project.scripts]
rts = 'rts.rts:main'
rts_server = 'server.server:cli'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Daniele-Tentoni/rts/issues"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
mkdocs = "^1.2.3"
mypy = "^1.0"
pygame-gui = "^0.6.4"
toml = "^0.10.2"
xdg = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
pytest = "^7.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
